force-app/main/default/objects/BGBK__Payment_Method__mdt/fields/BGBK__isActive__c.field-meta.xml
<CustomField>
    <fullName>BGBK__isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>