force-app/main/default/objects/BGBK__Payment_Method__mdt/fields/BGBK__isPortal_Accessible__c.field-meta.xml
<CustomField>
    <fullName>BGBK__isPortal_Accessible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Accessible</label>
    <type>Checkbox</type>
</CustomField>